feat: update images

--- a/Email Templates/new_products.html
+++ b/Email Templates/new_products.html
@@ -133,7 +133,7 @@
                                                         <th class="inner ui-sortable" style="width: 50%; background-color: #fff;" role="presentation">
                                                             <div data-editorblocktype="Image" style="margin: 10px; padding: 0px;">
                                                                 <div>
-                                                                    <img src="../Images/Quarrix Logo_RGB_EarthGreen 1.svg" style="max-height: 100%; max-width: 194px; box-sizing: border-box; display: block; border-radius: 0px; object-fit: contain;">
+                                                                    <img src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/b7a99c45-6d98-ef11-8a6a-00224805dbbd?ts=638660748648220043" style="max-height: 100%; max-width: 194px; box-sizing: border-box; display: block; border-radius: 0px; object-fit: contain;">
                                                                 </div>
                                                             </div>
                                                         </th>
@@ -141,19 +141,19 @@
                                                             <table width="100%" cellpadding="0" cellspacing="0" border="0">
                                                                 <tr>
                                                                     <td width="100%">
-                                                                    <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:100%;height:77px;">
-                                                                        <v:fill type="frame" src="../Images/Vector\ 6.svg" />
+                                                                    <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:100%;height:87px;">
+                                                                        <v:fill type="frame" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/2bc808a5-6698-ef11-8a6a-00224805dbbd?ts=638660720166553968" />
                                                                         <v:textbox inset="0,0,0,0">
-                                                                        <table width="100%" height="77px;" cellpadding="0" cellspacing="0" border="0">
+                                                                        <table width="100%" height="87px;" cellpadding="0" cellspacing="0" border="0">
                                                                             <tr>
                                                                             <td>
                                                         <![endif]-->
-                                                        <th style="width: 50%; background-image: url('../Images/Vector\ 6.svg'); background-position: center; background-repeat: no-repeat; padding-left: 50px;">
+                                                        <th style="width: 50%; background-image: url('https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/2bc808a5-6698-ef11-8a6a-00224805dbbd?ts=638660720166553968'); background-position: center; background-repeat: no-repeat; padding-left: 50px; background-size: cover; height: 87px;">
                                                             <table style="width: 100%;">
                                                                 <tbody>
                                                                     <tr>
                                                                         <th style="max-width: 40px;">
-                                                                            <img style="max-width: 40px; width: 100%; object-fit: contain;" src="../Images/call_24dp_5F6368_FILL1_wght400_GRAD0_opsz24 2.svg" />
+                                                                            <img style="max-width: 40px; width: 100%; object-fit: contain;" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/38c808a5-6698-ef11-8a6a-00224805dbbd?ts=638660720169210312" />
                                                                         </th>
                                                                         <th>
                                                                             <p style="margin: 0; font-size: 13px; font-weight: 700; line-height: 15px; color: #fff;">CONTACT US</p>
@@ -188,13 +188,13 @@
                                 <tr>
                                     <td width="100%">
                                     <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:100%;height:450px;">
-                                        <v:fill type="frame" src="../Images/Frame\ 22.png" />
+                                        <v:fill type="frame" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/86edc8a8-6398-ef11-8a6a-00224805dbbd?ts=638660707341765991" />
                                         <v:textbox inset="0,0,0,0">
                                         <table width="100%" height="450px;" cellpadding="0" cellspacing="0" border="0">
                                             <tr>
                                             <td>
                         <![endif]-->
-                        <th style="background-image: url('../Images/Frame\ 22.png'); background-repeat: no-repeat; background-position: center; background-size: cover; height: 450px;">
+                        <th style="background-image: url('https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/86edc8a8-6398-ef11-8a6a-00224805dbbd?ts=638660707341765991'); background-repeat: no-repeat; background-position: center; background-size: cover; height: 450px;">
                             <table style="width: 100%; margin-top: 294px;">
                                 <tbody>
                                     <tr>
@@ -229,13 +229,13 @@
                                 <tbody>
                                     <tr>
                                         <th style="width: 33.33%; padding: 15px; border-right: 1px solid #E9E9E9; border-bottom: 1px solid #E9E9E9;">
-                                            <img style="width: 100%; max-width: 131px; object-fit: contain;" src="../Images/ALL_Quarrix Product Category Logos_Attic Protection_Stacked_Icon_Attic Green 1.svg" />
+                                            <img style="width: 100%; max-width: 131px; object-fit: contain;" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/b4a99c45-6d98-ef11-8a6a-00224805dbbd?ts=638660748648220043" />
                                         </th>
                                         <th style="width: 33.33%; padding: 15px; border-right: 1px solid #E9E9E9; border-bottom: 1px solid #E9E9E9;">
-                                            <img style="width: 100%; max-width: 131px; object-fit: contain;" src="../Images/ALL_Quarrix Product Category Logos_Roof Protection_Stacked_Icon_Roof Brown 1.svg" />
+                                            <img style="width: 100%; max-width: 131px; object-fit: contain;" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/cca99c45-6d98-ef11-8a6a-00224805dbbd?ts=638660748653220383" />
                                         </th>
                                         <th style="width: 33.33%; padding: 15px; border-bottom: 1px solid #E9E9E9;">
-                                            <img style="width: 100%; max-width: 131px; object-fit: contain;" src="../Images/ALL_Quarrix Product Category Logos_Wall Protection_Stacked_Icon_Wall Blue 1.svg" />
+                                            <img style="width: 100%; max-width: 131px; object-fit: contain;" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/b5a99c45-6d98-ef11-8a6a-00224805dbbd?ts=638660748648220043" />
                                         </th>
                                     </tr>
                                 </tbody>
@@ -251,15 +251,15 @@
                                 Inc. in 1985 and, with LDI's support and passion for innovation, developed several patented designs that 
                                 lead to advanced building materials and breakthroughs within the roofing industry.
                             </p>
-                            <img style="width: 100%; object-fit: cover; margin-bottom: 20px" src="../Images/Frame 23.png" />
+                            <img style="width: 100%; object-fit: cover; margin-bottom: 20px" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/a0edc8a8-6398-ef11-8a6a-00224805dbbd?ts=638660707346922611" />
                             <table style="width: 100%;">
                                 <tbody>
                                     <tr>
                                         <th style="width: 50%; padding-right: 10px;">
-                                            <img style="width: 100%; object-fit: cover;" src="../Images/Frame 14.png" />
+                                            <img style="width: 100%; object-fit: cover;" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/80edc8a8-6398-ef11-8a6a-00224805dbbd?ts=638660707337546952" />
                                         </th>
                                         <th style="width: 50%; padding-left: 10px;">
-                                            <img style="width: 100%; object-fit: cover;" src="../Images/Frame 13.png" />
+                                            <img style="width: 100%; object-fit: cover;" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/7aedc8a8-6398-ef11-8a6a-00224805dbbd?ts=638660707324108563" />
                                         </th>
                                     </tr>
                                 </tbody>
@@ -274,13 +274,13 @@
                                     <tr>
                                         <td width="100%">
                                         <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:100%;height:170px;">
-                                            <v:fill type="frame" src="../Images/Frame\ 26.png" />
+                                            <v:fill type="frame" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/9dedc8a8-6398-ef11-8a6a-00224805dbbd?ts=638660707343797411" />
                                             <v:textbox inset="0,0,0,0">
                                             <table width="100%" height="170px;" cellpadding="0" cellspacing="0" border="0">
                                                 <tr>
                                                 <td>
                             <![endif]-->
-                            <table style="padding: 30px 40px; width: 100%; background-image: url('../Images/Frame\ 26.png'); background-position: center; background-size: cover; background-repeat: no-repeat;">
+                            <table style="padding: 30px 40px; width: 100%; background-image: url('https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/9dedc8a8-6398-ef11-8a6a-00224805dbbd?ts=638660707343797411'); background-position: center; background-size: cover; background-repeat: no-repeat;">
                                 <tbody>
                                     <tr>
                                         <th style="width: 70%; padding-right: 30px;">
@@ -311,23 +311,23 @@
                                 <tbody>
                                     <tr>
                                         <th style="width: 70%; text-align: start;">
-                                           <img style="width: 100%; max-width: 220px; object-fit: contain; margin-bottom: 11px;" src="../Images/Quarrix-Logo_RGB_White 2.svg" />
+                                           <img style="width: 100%; max-width: 220px; object-fit: contain; margin-bottom: 11px;" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/b6a99c45-6d98-ef11-8a6a-00224805dbbd?ts=638660748648220043" />
                                            <table>
                                                 <tbody>
                                                     <tr>
                                                         <th style="width: 33.33%;">
                                                             <a style="display: inline-block; margin-right: 5px;" href="#!">
-                                                                <img style="width: 100%; object-fit: contain;" src="../Images/Vector.svg" alt="Facebook Icon" />
+                                                                <img style="width: 100%; max-width: 38px; object-fit: contain;" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/2ec808a5-6698-ef11-8a6a-00224805dbbd?ts=638660720168897753" alt="Facebook Icon" />
                                                             </a>
                                                         </th>
                                                         <th style="width: 33.33%;">
                                                             <a style="display: inline-block; margin-right: 5px;" href="#!">
-                                                                <img style="width: 100%; object-fit: contain;" src="../Images/Group.svg" alt="Linkedin Icon" />
+                                                                <img style="width: 100%; max-width: 38px; object-fit: contain;" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/31c808a5-6698-ef11-8a6a-00224805dbbd?ts=638660720166085191" alt="Linkedin Icon" />
                                                             </a>
                                                         </th>
                                                         <th style="width: 33.33%;">
                                                             <a style="display: inline-block;" href="#!">
-                                                                <img style="width: 100%; object-fit: contain;" src="../Images/287676_pinterest_icon 1.svg" alt="Instagram Icon" />
+                                                                <img style="width: 100%; max-width: 38px; object-fit: contain;" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/2ac808a5-6698-ef11-8a6a-00224805dbbd?ts=638660720165147641" alt="Instagram Icon" />
                                                             </a>
                                                         </th>
                                                     </tr>
