feat: replace rice color with green color

--- a/Email Templates/new_products.html
+++ b/Email Templates/new_products.html
@@ -403,9 +403,9 @@
                           <!--[if gte mso 9]>
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
   <tr>
-    <td width="100%" style="background-color: #79232f; padding-left: 0; padding-right: 0;">
+    <td width="100%" style="background-color: #055641; padding-left: 0; padding-right: 0;">
       <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:600px;height:380px;">
-        <v:fill type="frame" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/86edc8a8-6398-ef11-8a6a-00224805dbbd?ts=638660707341765991" color="#79232f" />
+        <v:fill type="frame" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/86edc8a8-6398-ef11-8a6a-00224805dbbd?ts=638660707341765991" color="#055641" />
         <v:textbox inset="0,0,0,0">
           <table width="100%" height="380px;" style="min-height: 380px;" cellpadding="0" cellspacing="0" border="0">
             <tr>
@@ -1220,9 +1220,9 @@
                           <!--[if gte mso 9]>
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
   <tr>
-    <td width="100%" style="background-color: #79232f; padding-left: 0; padding-right: 0;">
+    <td width="100%" style="background-color: #055641; padding-left: 0; padding-right: 0;">
       <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:600px;height:175px;">
-        <v:fill type="frame" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/9dedc8a8-6398-ef11-8a6a-00224805dbbd?ts=638660707343797411" color="#79232f" />
+        <v:fill type="frame" src="https://assets-usa.mkt.dynamics.com/b0af94af-21e2-ee11-9048-6045bd059021/digitalassets/images/9dedc8a8-6398-ef11-8a6a-00224805dbbd?ts=638660707343797411" color="#055641" />
         <v:textbox inset="0,0,0,0">
           <table width="100%" height="175px;" style="min-height: 175px;" cellpadding="0" cellspacing="0" border="0">
             <tr>
