--- a/Email Templates/new_products.html
+++ b/Email Templates/new_products.html
@@ -1030,6 +1030,53 @@
                 </div>
 
                 <div
+                  class="hse-section"
+                  style="
+                    min-width: 280px;
+                    max-width: 600px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    padding-left: 10px;
+                    padding-right: 10px;
+
+                    margin-top: 40px;
+                    margin-bottom: 40px;
+                    text-align: center;
+                  "
+                >
+                  <a
+                    href="#top"
+                    target="_blank"
+                    style="
+                      color: #000;
+                      font-size: 16px;
+                      font-family: Arial, sans-serif;
+                      margin: 0;
+                      text-transform: none;
+                      text-decoration: none;
+                      padding: 12px 18px;
+                      display: block;
+                      border: 1px solid #000;
+                      border-radius: 2px;
+                      width: 150px;
+                      margin-left: auto;
+                      margin-right: auto;
+                    "
+                    data-hs-link-id="0"
+                  >
+                    <strong
+                      style="
+                        color: #000000;
+                        font-weight: bold;
+                        text-decoration: none;
+                        font-style: normal;
+                      "
+                      >View All Products</strong
+                    >
+                  </a>
+                </div>
+
+                <div
                   id="section_1730580454363"
                   class="hse-section"
                   style="padding-left: 10px; padding-right: 10px"
