--- a/Email Templates/new_products.html
+++ b/Email Templates/new_products.html
@@ -1038,42 +1038,53 @@
                     margin-right: auto;
                     padding-left: 10px;
                     padding-right: 10px;
-
-                    margin-top: 40px;
-                    margin-bottom: 40px;
                     text-align: center;
                   "
                 >
-                  <a
-                    href="#top"
-                    target="_blank"
+                  <div
+                    class="hse-column-container"
                     style="
-                      color: #000;
-                      font-size: 16px;
-                      font-family: Arial, sans-serif;
-                      margin: 0;
-                      text-transform: none;
-                      text-decoration: none;
-                      padding: 12px 18px;
-                      display: block;
-                      border: 1px solid #000;
-                      border-radius: 2px;
-                      width: 150px;
+                      min-width: 280px;
+                      max-width: 600px;
                       margin-left: auto;
                       margin-right: auto;
+                      background-color: #fafafa;
+                      padding-top: 40px;
+                      padding-bottom: 40px;
                     "
-                    data-hs-link-id="0"
+                    bgcolor="#fafafa"
                   >
-                    <strong
+                    <a
+                      href="#top"
+                      target="_blank"
                       style="
-                        color: #000000;
-                        font-weight: bold;
+                        color: #000;
+                        font-size: 16px;
+                        font-family: Arial, sans-serif;
+                        margin: 0;
+                        text-transform: none;
                         text-decoration: none;
-                        font-style: normal;
+                        padding: 12px 18px;
+                        display: block;
+                        border: 1px solid #000;
+                        border-radius: 2px;
+                        width: 150px;
+                        margin-left: auto;
+                        margin-right: auto;
                       "
-                      >View All Products</strong
+                      data-hs-link-id="0"
                     >
-                  </a>
+                      <strong
+                        style="
+                          color: #000000;
+                          font-weight: bold;
+                          text-decoration: none;
+                          font-style: normal;
+                        "
+                        >View All Products</strong
+                      >
+                    </a>
+                  </div>
                 </div>
 
                 <div
