--- a/Email Templates/new_products.html
+++ b/Email Templates/new_products.html
@@ -1188,7 +1188,12 @@
                                         word-break: break-word;
                                       "
                                     >
-                                      <div style="padding: 15px">
+                                      <div
+                                        style="
+                                          padding: 15px;
+                                          text-align: center;
+                                        "
+                                      >
                                         <h2
                                           style="
                                             margin: 0;
@@ -1196,6 +1201,7 @@
                                             font-weight: bold;
                                             line-height: 115%;
                                             font-size: 30px;
+                                            text-align: center;
                                           "
                                         >
                                           <span style="color: #ffffff"
@@ -1207,6 +1213,7 @@
                                           style="
                                             font-size: 17px;
                                             line-height: 125%;
+                                            text-align: center;
                                           "
                                         >
                                           <span style="color: #ffffff"
@@ -1232,14 +1239,14 @@
                                             background-color: transparent;
                                             border: 1px solid #fff;
                                             border-radius: 2px;
-                                            width: 116px;
-                                            display: block;
+                                            padding: 10px 28px;
+                                            display: inline-block;
                                             text-decoration: none;
                                             font-size: 14px;
-                                            font-weight: bold;
-                                            height: 40px;
-                                            line-height: 40px;
-                                            text-align: center;
+                                            font-weight: 700;
+                                            line-height: 23px;
+                                            margin-left: auto;
+                                            margin-right: auto;
                                           "
                                           bgcolor="transparent"
                                           width="116"
