feat: new event updates

--- a/Email Templates/starter2.html
+++ b/Email Templates/starter2.html
@@ -325,6 +325,7 @@
       data-layout-version="v2"
       style="max-width: 600px; margin: auto"
     >
+      <!-- HEADER START  -->
       <div
         id="section_1730578438900"
         class="hse-section"
@@ -468,6 +469,8 @@
 
         <!--[if gte mso 9]></td></tr></table><![endif]-->
       </div>
+      <!-- HEADER END  -->
+
       <div
         data-section="true"
         class="emptyContainer columns-equal-class wrap-section emptySection"
