--- a/Email Templates/new_event.html
+++ b/Email Templates/new_event.html
@@ -927,6 +927,7 @@
                                   font-size: inherit;
                                   line-height: inherit;
                                   padding-bottom: 10px;
+                                  border: 1px solid #000;
                                 "
                                 data-hs-cos-general-type="widget"
                                 data-hs-cos-type="module"
