feat: new special promo updates, conditional logic for outlook 2016 for new general newsletter

--- a/Email Templates/new_special_promo.html
+++ b/Email Templates/new_special_promo.html
@@ -707,7 +707,7 @@
 
                 <!-- SECTION 3 START -->
                 <div id="section_1733756770061" class="hse-section">
-                  <!--[if !((mso)|(IE))]><!-- -->
+                  <!--[if !((mso)|(IE))]><!-->
                   <div
                     class="hse-column-container"
                     style="
@@ -1545,7 +1545,7 @@
                               >
                                 <img
                                   alt="Group 18 (1)"
-                                  src="https://26219902.fs1.hubspotusercontent-eu1.net/hub/26219902/hubfs/Group%2018%20(1).png?width=1120&amp;upscale=true&amp;name=Group%2018%20(1).png"
+                                  src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Quarrix/StormStop.png"
                                   style="
                                     outline: none;
                                     text-decoration: none;
@@ -1771,7 +1771,7 @@
                               >
                                 <img
                                   alt="Group 20"
-                                  src="https://26219902.fs1.hubspotusercontent-eu1.net/hub/26219902/hubfs/Group%2020.png?width=1106&amp;upscale=true&amp;name=Group%2020.png"
+                                  src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Quarrix/SmartPlug.png"
                                   style="
                                     outline: none;
                                     text-decoration: none;
@@ -1993,7 +1993,7 @@
                               >
                                 <img
                                   alt="Group 21"
-                                  src="https://26219902.fs1.hubspotusercontent-eu1.net/hub/26219902/hubfs/Group%2021.png?width=1106&amp;upscale=true&amp;name=Group%2021.png"
+                                  src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Quarrix/DryRoof.png"
                                   style="
                                     outline: none;
                                     text-decoration: none;
