feat: general newsletter outlook 2016 final update

--- a/Email Templates/new_general_newsletter.html
+++ b/Email Templates/new_general_newsletter.html
@@ -737,6 +737,34 @@
                                     <tbody>
                                       <tr>
                                         <td style="padding-right: 5px">
+                                          <!--[if mso]>
+                                            <v:roundrect
+                                              xmlns:v="urn:schemas-microsoft-com:vml"
+                                              xmlns:w="urn:schemas-microsoft-com:office:word"
+                                              arcsize="50%"
+                                              fillcolor="#065742"
+                                              strokecolor="#065742"
+                                              style="
+                                                height: 36px;
+                                                width: 80px;
+                                                v-text-anchor: middle;
+                                              "
+                                            >
+                                              <w:anchorlock />
+                                              <center
+                                                style="
+                                                  color: #ffffff;
+                                                  font-family: Roboto,
+                                                    sans-serif;
+                                                  font-size: 16px;
+                                                  font-weight: 500;
+                                                "
+                                              >
+                                                Caring
+                                              </center>
+                                            </v:roundrect>
+                                          <![endif]-->
+                                          <!--[if !mso]><!-->
                                           <p
                                             style="
                                               background: #065742;
@@ -750,13 +778,42 @@
                                               text-underline-position: from-font;
                                               text-decoration-skip-ink: none;
                                               width: 60px;
-                                              text-align: center;
+                                              margin: 0;
                                             "
                                           >
                                             Caring
                                           </p>
+                                          <!--<![endif]-->
                                         </td>
                                         <td style="padding-right: 5px">
+                                          <!--[if mso]>
+                                            <v:roundrect
+                                              xmlns:v="urn:schemas-microsoft-com:vml"
+                                              xmlns:w="urn:schemas-microsoft-com:office:word"
+                                              arcsize="50%"
+                                              fillcolor="#065742"
+                                              strokecolor="#065742"
+                                              style="
+                                                height: 36px;
+                                                width: 100px;
+                                                v-text-anchor: middle;
+                                              "
+                                            >
+                                              <w:anchorlock />
+                                              <center
+                                                style="
+                                                  color: #ffffff;
+                                                  font-family: Roboto,
+                                                    sans-serif;
+                                                  font-size: 16px;
+                                                  font-weight: 500;
+                                                "
+                                              >
+                                                Innovation
+                                              </center>
+                                            </v:roundrect>
+                                          <![endif]-->
+                                          <!--[if !mso]><!-->
                                           <p
                                             style="
                                               background: #065742;
@@ -770,13 +827,42 @@
                                               text-underline-position: from-font;
                                               text-decoration-skip-ink: none;
                                               width: 85px;
-                                              text-align: center;
+                                              margin: 0;
                                             "
                                           >
                                             Innovation
                                           </p>
+                                          <!--<![endif]-->
                                         </td>
                                         <td style="padding-right: 5px">
+                                          <!--[if mso]>
+                                            <v:roundrect
+                                              xmlns:v="urn:schemas-microsoft-com:vml"
+                                              xmlns:w="urn:schemas-microsoft-com:office:word"
+                                              arcsize="50%"
+                                              fillcolor="#065742"
+                                              strokecolor="#065742"
+                                              style="
+                                                height: 36px;
+                                                width: 80px;
+                                                v-text-anchor: middle;
+                                              "
+                                            >
+                                              <w:anchorlock />
+                                              <center
+                                                style="
+                                                  color: #ffffff;
+                                                  font-family: Roboto,
+                                                    sans-serif;
+                                                  font-size: 16px;
+                                                  font-weight: 500;
+                                                "
+                                              >
+                                                Trust
+                                              </center>
+                                            </v:roundrect>
+                                          <![endif]-->
+                                          <!--[if !mso]><!-->
                                           <p
                                             style="
                                               background: #065742;
@@ -790,13 +876,42 @@
                                               text-underline-position: from-font;
                                               text-decoration-skip-ink: none;
                                               width: 60px;
-                                              text-align: center;
+                                              margin: 0;
                                             "
                                           >
                                             Trust
                                           </p>
+                                          <!--<![endif]-->
                                         </td>
                                         <td>
+                                          <!--[if mso]>
+                                            <v:roundrect
+                                              xmlns:v="urn:schemas-microsoft-com:vml"
+                                              xmlns:w="urn:schemas-microsoft-com:office:word"
+                                              arcsize="50%"
+                                              fillcolor="#065742"
+                                              strokecolor="#065742"
+                                              style="
+                                                height: 36px;
+                                                width: 100px;
+                                                v-text-anchor: middle;
+                                              "
+                                            >
+                                              <w:anchorlock />
+                                              <center
+                                                style="
+                                                  color: #ffffff;
+                                                  font-family: Roboto,
+                                                    sans-serif;
+                                                  font-size: 16px;
+                                                  font-weight: 500;
+                                                "
+                                              >
+                                                Excellence
+                                              </center>
+                                            </v:roundrect>
+                                          <![endif]-->
+                                          <!--[if !mso]><!-->
                                           <p
                                             style="
                                               background: #065742;
@@ -810,11 +925,12 @@
                                               text-underline-position: from-font;
                                               text-decoration-skip-ink: none;
                                               width: 85px;
-                                              text-align: center;
+                                              margin: 0;
                                             "
                                           >
                                             Excellence
                                           </p>
+                                          <!--<![endif]-->
                                         </td>
                                       </tr>
                                     </tbody>
@@ -1797,12 +1913,54 @@
                         "
                         bgcolor="#ffffff"
                       >
-                        <div style="padding: 0 20px">
-                          <img
-                            src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Quarrix/general-newsletter-image.png"
-                            style="width: 100%; height: auto"
-                            alt="general-newsletter-image"
-                          />
+                        <div
+                          id="column_1730578072856_03213213"
+                          class="hse-column hse-size-12"
+                        >
+                          <div
+                            id="hs_cos_wrapper_module_17305779850855321321321"
+                            class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module"
+                            style="
+                              color: inherit;
+                              font-size: inherit;
+                              line-height: inherit;
+                              padding: 10px 0 20px;
+                            "
+                            data-hs-cos-general-type="widget"
+                            data-hs-cos-type="module"
+                          >
+                            <table
+                              class="hse-image-wrapper"
+                              role="presentation"
+                              width="100%"
+                              cellpadding="0"
+                              cellspacing="0"
+                            >
+                              <tbody>
+                                <tr>
+                                  <td
+                                    class="hs_padded"
+                                    align="center"
+                                    valign="top"
+                                    style="
+                                      font-family: Arial, sans-serif;
+                                      color: #23496d;
+                                      word-break: break-word;
+                                      text-align: center;
+                                      padding: 10px 20px;
+                                      font-size: 0px;
+                                    "
+                                  >
+                                    <img
+                                      src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Quarrix/general-newsletter-image.png"
+                                      style="width: 100%; height: auto"
+                                      alt="general-newsletter-image"
+                                    />
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
                         </div>
                       </div>
                     </div>
