feat: new event final updates

--- a/Email Templates/new_event.html
+++ b/Email Templates/new_event.html
@@ -916,7 +916,6 @@
                                 font-size: 15px;
                                 color: #23496d;
                                 word-break: break-word;
-                                padding: 10px 20px;
                               "
                             >
                               <div
@@ -926,8 +925,6 @@
                                   color: inherit;
                                   font-size: inherit;
                                   line-height: inherit;
-                                  padding-bottom: 10px;
-                                  border: 1px solid #000;
                                 "
                                 data-hs-cos-general-type="widget"
                                 data-hs-cos-type="module"
@@ -944,17 +941,23 @@
                                           text-align: left;
                                           background-size: contain;
                                           background-repeat: no-repeat;
-                                          padding-bottom: 19px;
+                                          padding: 0 20px 20px;
                                         "
                                         width="100%"
                                         align="center"
                                       >
                                         <div data-editorblocktype="Text">
-                                          <div style="padding-left: 30px">
+                                          <div>
                                             <table style="width: 100%">
                                               <tbody>
                                                 <tr>
                                                   <td>
+                                                    <!--[if mso]>
+                                <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" 
+                                  style="height: 30px; v-text-anchor: middle; width: 180px;" arcsize="50%" stroke="false" fillcolor="#000000">
+                                  <w:anchorlock />
+                                  <center style="color: #ffffff; font-family: Arial, sans-serif; font-size: 15px;">
+                                <![endif]-->
                                                     <div
                                                       style="
                                                         background-color: #000000;
@@ -968,6 +971,10 @@
                                                     >
                                                       January 22, 2025
                                                     </div>
+                                                    <!--[if mso]>
+                                </center>
+                              </v:roundrect>
+                              <![endif]-->
                                                   </td>
                                                   <td style="text-align: right">
                                                     <img
@@ -980,8 +987,6 @@
                                           </div>
                                           <h2
                                             style="
-                                              padding-left: 30px;
-                                              padding-right: 30px;
                                               font-family: Roboto, sans-serif;
                                               font-size: 28px;
                                               font-weight: 800;
@@ -998,7 +1003,6 @@
                                           </h2>
                                           <p
                                             style="
-                                              padding: 0 30px 0;
                                               font-size: 18px;
                                               color: #494949;
                                               margin-top: 10px;
@@ -1023,7 +1027,6 @@
                                               border: 1px solid #49ab6e;
                                               border-radius: 2px;
                                               width: 130px;
-                                              margin-left: 30px;
                                               margin-top: 30px;
                                               text-align: center;
                                             "
